# lambda-cube

./: .coveralls.yml  .gitignore  .travis.yml  LICENSE  README.md  cabal.project.local  codecov.yml  flamegraph  hp2pretty  lambda-cube.cabal  lp.hs  package.yaml  prelude.lp  prof-flamegraph  src.hs  stack-gh-pages  stack.yaml  stlc.hs
.gitea/workflows/: pipeline.yaml
.github/workflows/: haskell.yml
app/: Main.hs
bench/: Crit.hs
doc/: L3-Lexer.html  L3-Parsec.html  doc-index.html  doc-index.json  index.html  lambda-cube.txt
docs/: L3-Core-DeBruijn.html  L3-Core-Eq.html  L3-Core-Eval.html  L3-Core-Expr.html  L3-Core-Infer.html  L3-Core-Normal.html  L3-Core-Show.html  L3-Core.html  L3-Lexer.html  L3-Loader-Loader.html  L3-Loader.html  L3-Log-Colors.html  L3-Log-Logging.html  L3-Log.html  L3-Logging.html  L3-Parse-ExprParser.html  L3-Parse-Lexer.html  L3-Parse-Parsec.html  L3-Parse-Parser.html  L3-Parse-StringParsec.html  L3-Parse-TokenParsec.html  L3-Parse.html  L3-Parsec.html  L3-Parser.html  L3-StringParsec.html  L3-TokenParsec.html  L3-Util-Util.html  L3-Util.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  (+14 more)
docs/src/: L3.Core.DeBruijn.html  L3.Core.Eq.html  L3.Core.Eval.html  L3.Core.Expr.html  L3.Core.Infer.html  L3.Core.Normal.html  L3.Core.Show.html  L3.Core.html  L3.Lexer.html  L3.Loader.Loader.html  L3.Loader.html  L3.Log.Colors.html  L3.Log.Logging.html  L3.Log.html  L3.Logging.html  L3.Parse.ExprParser.html  L3.Parse.Lexer.html  L3.Parse.Parsec.html  L3.Parse.Parser.html  L3.Parse.StringParsec.html  L3.Parse.TokenParsec.html  L3.Parse.html  L3.Parsec.html  L3.Parser.html  L3.StringParsec.html  L3.TokenParsec.html  L3.Util.Util.html  L3.Util.html  Paths_lambda_cube.html
exec/: Main.hs  RichRepl.hs
lib/L3/: Core.hs  Loader.hs  Parsec.hs  Parser.hs  Pretty.hs  Util.hs
lib/l3/: Bind.hs  Core.hs  Loader.hs  Parsec.hs  Parser.hs  Pretty.hs  Util.hs
prelude/: compose.l3  even.l3  filter.l3  find.l3  length.l3  odd.l3  replicate.l3
prelude/List/: all.l3  any.l3  map.l3
prelude/Nat/: 0.l3  @.l3  Succ.l3  Zero.l3  plus.l3  product.l3  sum.l3
src/: AndresLoeh.hs  Constructions.hs  Core.hs  LambdaPi.hs  Main.hs  ParseIO.hs  Parsec.hs  Pretty.hs  Repl.hs  SimplyTyped.hs  Test.hs  Util.hs
src/L3/: Core.hs  Lexer.hs  Loader.hs  Log.hs  Logging.hs  Parse.hs  Parsec.hs  Parser.hs  Pretty.hs  StringParsec.hs  TokenParsec.hs  Util.hs
src/L3/Core/: DeBruijn.hs  Eq.hs  Eval.hs  Expr.hs  Infer.hs  Normal.hs  Show.hs
src/L3/Loader/: Loader.hs
src/L3/Log/: Colors.hs  Logging.hs
src/L3/Parse/: ExprParser.hs  Lexer.hs  Parsec.hs  Parser.hs  StringParsec.hs  TokenParsec.hs
src/L3/Util/: Util.hs
test/: Main.hs  Spec.hs  Test.hs  TestUtil.hs  stlc.cube
test/L3/: CoreTest.hs  TestCore.hs  TestLexer.hs  TestLoader.hs  TestLog.hs  TestParse.hs  TestParser.hs  TestUtil.hs
test/L3/Core/: TestDeBruijn.hs  TestEq.hs  TestEval.hs  TestInfer.hs  (+2 more)
test/Morte/: TestMorte.hs  example0.l3  example1.l3  example10.l3  example10.mt  example11.l3  example11.mt  example12.l3  example12.mt  example13.l3  example13.mt  example14.l3  example14.mt  example15.l3  example2.l3  example2.mt  example3.l3  example4.l3  example5.l3  example5.mt  example6.l3  example6.mt  example7.l3  example7.mt  example8.l3  example8.mt  example9.l3  example9.mt
test/morte/: example0.mt  example11.mt  example15.mt  example3.mt  example4.mt  example5.mt  example9.mt
(+7 files in other folders)
