name:                lambda-cube
version:             0.1
homepage:            https://github.com/githubuser/lambda-cube#readme
license:             MIT
license-file:        LICENSE
author:              Adam Lassiter
maintainer:          adamlassiter96@gmail.com
copyright:           2020-2021 Adam Lassiter
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10
data-files:          test/morte/*.mt, prelude/**
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, text >= 1.2 && < 1.3, bytestring >= 0.10 && < 0.11
  exposed-modules:
    L3.Core, L3.Parsec, L3.Parser, L3.Pretty, L3.Loader, L3.Util

executable repl
  hs-source-dirs:      exec
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, lambda-cube, haskeline

test-suite tests
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.7 && < 5, lambda-cube
